# DocChat_CLI

./: .dockerignore  .env.example  .gitignore  .prettierrc  Dockerfile  README.md  RUN_GUIDE.md  api-docker-setup.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  ci.yml
docs/: PLAN-legal-rag-corpus.md  RUN_GUIDE.md  gioi_thieu_do_an.md  github_benchmark_analysis.md  legal-rag-analysis.md  phase1-data-foundation-research.md
prompts/: qa_rag.yaml
scripts/: evaluate_rag.py  migrate_to_chroma.py
src/docchat/: __init__.py  api.py  chunker.py  cli.py  embedder.py  llm.py  loader.py  logger.py  logging.py  observability.py  prompt_manager.py  server.py  store.py
src/docchat/core/: __init__.py  chunker.py  loader.py
src/docchat/core/prompts/: summarizer.yaml
src/docchat/embeddings/: __init__.py  embedder.py
src/docchat/infrastructure/: __init__.py  observability.py
src/docchat/interfaces/: __init__.py  api.py  cli.py  server.py
src/docchat/llm/: __init__.py  session.py
src/docchat/storage/: __init__.py  store.py
tests/: conftest.py  test_api.py  test_chunker.py  test_cli.py  test_embedder.py  test_llm.py  test_loader.py  test_observability.py  test_prompt_manager.py  test_server.py  test_store.py
tools/: evaluate_rag.py  migrate_to_chroma.py
web/: index.html
