[project]
name = "docchat"
version = "0.1.0"
description = "Hỏi đáp tài liệu từ terminal"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.86.0",
    "chromadb>=1.5.5",
    "langchain-text-splitters>=1.1.1",
    "openai>=1.0.0",
    "python-dotenv>=1.2.2",
    "pyvi>=0.1.1",
    "pyyaml>=6.0.3",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=2.7.0",
    "tenacity>=9.1.4",
    "tiktoken>=0.12.0",
]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]


[project.scripts]
docchat = "docchat.cli:main"

[tool.uv]
package = true


[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=0.23.0",
    "ragas>=0.4.3",
    "datasets>=4.8.4",
]


[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=docchat --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
